-- V1__create_types.sql

CREATE TYPE account_status AS ENUM ('ACTIVE', 'BANNED');
CREATE TYPE event_status AS ENUM ('CONFIRMED', 'PUBLISHED', 'CANCELLED');
CREATE TYPE visibility AS ENUM ('PUBLIC', 'PRIVATE_GUEST_LIST');
CREATE TYPE booking_status AS ENUM ('PENDING_PAYMENT', 'CONFIRMED', 'CANCELLED');
CREATE TYPE guest_status AS ENUM ('INVITED', 'CONFIRMED', 'CANCELLED');
CREATE TYPE request_status AS ENUM ('PENDING', 'ACCEPTED', 'REJECTED', 'CANCELLED');
CREATE TYPE severity AS ENUM ('LOW', 'MIDDLE', 'HIGH');
