@startuml
skinparam style strictuml
skinparam shadowing false
skinparam DefaultFontName "Helvetica"
skinparam DefaultFontSize 12

skinparam state {
    BackgroundColor #F5F7FA
    BorderColor #A0AEC0
    FontColor #2D3748
    FontSize 13
    FontStyle bold

    ArrowColor #4A5568
    ArrowThickness 1.6
    ArrowFontColor #4A5568
    ArrowFontSize 11
}

skinparam ranksep 100
skinparam nodesep 120

[*] --> PENDING_PAYMENT : createBooking() [evento prenotabile e posti disponibili]

PENDING_PAYMENT --> CONFIRMED : confirmBooking() [proprietario o Administrator]

PENDING_PAYMENT -right-> CANCELLED : cancelBooking() [proprietario o Administrator]\noppure cancelEvent()
CONFIRMED -right-> CANCELLED : cancelBooking() [proprietario o Administrator]\noppure cancelEvent()

PENDING_PAYMENT --> [*] : deleteBooking() [proprietario o Administrator]
CONFIRMED --> [*] : deleteBooking() [proprietario o Administrator]
CANCELLED --> [*] : deleteBooking() [proprietario o Administrator]
@endum
